--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">DropDownMenu</string>
+    <string-array name="countryListResource">
+        <item>Canada</item>
+        <item>United States</item>
+        <item>India</item>
+        <item>United Kingdom</item>
+        <item>Germany</item>
+        <item>Australia</item>
+        <item>France</item>
+        <item>Italy</item>
+        <item>Belgium</item>
+        <item>Switzerland</item>
+        <item>Spain</item>
+        <item>Sweden</item>
+        <item>Denmark</item>
+        <item>Netherlands</item>
+        <item>Portugal</item>
+        <item>Poland</item>
+        <item>Belgium</item>
+    </string-array>
 </resources>
